# mf07-core-compiler

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo_logging_levels.bat  eco.system.json  generated.c  language_config.yaml  mf.cmd  mf.exe.spec  mf.py  module.py  pyproject.toml  requirements.txt  run_py.bat  setup.cfg  update_corplang_v2.7.0.bat
__pycache__/: module.cpython-312.pyc.2649427973168
core/: datetime.mp  embedlist.mp  exceptions.mp  fs.mp  json.mp  list.mp  logger.mp  map.mp  math.mp  matrix.mp  objects.mp  optional.mp  path.mp  requests.mp  set.mp  socket.mp  string.mp  utils.mp
corp-lang-vscode/: ICONES_CORRIGIDOS_v2.6.0.md  INSTALAR_CORPLANG.bat  Instalar-CorpLang.ps1  PROBLEMA_ICONES_RESOLVIDO.md  README.md  README_INSTALADORES.md  README_v2.7.0.md  corp-lang-2.7.0.vsix  create_icon.py  install_v2.7.0.bat  install_v2.7.0.ps1  language-configuration.json  package.json  package_and_install.ps1  test_syntax_highlighting.mp
corplang/: __init__.py
docs/: architecture.md
exa/: generated_v1.c  test.mp
packaging/: installer.nsi  nfpm.yaml  package_macos.sh
scripts/: build_linux.sh  build_macos.sh  compile_native.sh  package_linux.sh  prevent_commit_to_main_or_production.sh
src/: interpreter.py  lang_ast.py  lexer.py  logger.py  logging_config.py  parser.py
tests/: configure_logs.py  conftest.py  debug_class_list.py  debug_conversion.py  debug_list_direct.py  debug_list_loading.py  debug_list_manual.py  debug_prototype.py  debug_static_methods.py  example_prototype_complete.py  exemplo_colecoes_completo.py  (+23 more)
(+89 files in other folders)
