[metadata]
name = corplang
version = 0.1.0
description = CorpLang — a small corporate programming language runtime

[options]
packages = find:
install_requires =
    aiohttp>=3.8.4
    requests>=2.31.0
    json5>=0.9.5
    jsonschema>=4.18.0

[options.entry_points]
console_scripts =
    mf = mf_cli:main

[flake8]
max-line-length = 88
extend-ignore = E203
